Refact SecurityUserDetailsService